Step 7: add Role enum and user role field with authority mapping